turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: value length is not a member of Char
	for(i <- 0 to rule(colorId).length)
                                    ^