turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {

	var colorId = 0;

	for(i <- 0 to colors.length)
	{
		if(colors(i) == getCouleurSol())
		{
			colorId = i;
		}
	}

	for(i <- 0 to rule(colorId).length)
	{
		setCouleurBrosse(colors(colorId));
		baisseBrosse();
		leveBrosse();
		
		if(rule(colorId)(i) == "L")
		{
			gauche();
			avance();
		}
		else if (rule(colorId)(i) == "R")
		{
			droite();
			avance();
		}
	}

}
